RESOLVED FIXED214628
Tapped DataDetected links present sub-menus from the wrong location.
https://bugs.webkit.org/show_bug.cgi?id=214628
Summary Tapped DataDetected links present sub-menus from the wrong location.
Megan Gardner
Reported 2020-07-22 00:24:00 PDT
Tapped DataDetected links present sub-menus from the wrong location.
Attachments
Patch (2.42 KB, patch)
2020-07-22 00:30 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-07-22 00:30:29 PDT
Megan Gardner
Comment 2 2020-07-22 00:30:59 PDT
Wenson Hsieh
Comment 3 2020-07-22 07:54:01 PDT
Comment on attachment 404905 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404905&action=review > Source/WebKit/ChangeLog:12 > + Setting this bit ensures that all the necessary data is calculated and returned > + when a DataDetector link is tapped. Just curious — where is the logic that uses this linkIndicator information?
Megan Gardner
Comment 4 2020-07-22 09:07:22 PDT
Comment on attachment 404905 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404905&action=review >> Source/WebKit/ChangeLog:12 >> + when a DataDetector link is tapped. > > Just curious — where is the logic that uses this linkIndicator information? It's the bailout condition at the top of linkIndicatorPositionInformation in WebPageIOS, which in this case we do not want to bail out of, so that sourceRect = _positionInformation->linkIndicator.textBoundingRectInRootViewCoordinates gives good date when sending a source rect to DD.
EWS
Comment 5 2020-07-22 09:09:57 PDT
Committed r264699: <https://trac.webkit.org/changeset/264699> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404905 [details].
Tim Horton
Comment 6 2020-07-22 09:40:27 PDT
Heh, this is a slightly heavyweight solution (because it involves needless snapshotting), but it will do the trick for now, until we split positionInformation up into more bite-sized chunks.
Note You need to log in before you can comment on or make changes to this bug.